# alt-poll

./: .gitignore  README.md  foo  package.json  scratch.json  skaffold.yaml  test.vuerd.json
alt/: Chart.yaml  ouch  values.yaml
alt-k8s/: values.yaml
alt-k8s/templates/: auth-svc.yaml  client-svc.yaml
alt/charts/: rabbitmq-8.7.4.tgz
alt/templates/: auth-svc.yaml  ingress.yaml  polls-svc.yaml  votes-svc.yaml
auth/: Dockerfile  authSchema  docker-compose.yaml  index.ts  package.json
auth/k8s/: auth-db.yaml
auth/src/: db.ts  index.ts  logger.ts  passport-setup.ts  routes.ts  server.ts  utils.ts
client/: Dockerfile  package.json  types.ts
client/pages/: UserProvider.tsx  _app.tsx  _document.tsx  foobar.tsx  index.tsx  options.tsx  polls.tsx  results.tsx  thank-you.tsx  theme.ts  votes.tsx  voting-link.tsx
client/src/: isLocalDev.ts  theme.ts
common/: package.json  tsconfig.json
common/src/: index.ts  utils.ts
k8s/: auth-db-pvc.yaml  auth-svc.yaml  ingress.yaml  namespace.json
polls/: Cargo.toml  Dockerfile  Pipfile  app.py  base_message_connection.py  docker-compose.yaml  package.json  pollsSchema.sql
polls/src/: index.ts  lapin_client.rs  logger.ts  main.rs  messaging_client.rs  passport-setup.ts
polls/src/db/: dbConnection.ts  queries.ts  utils.ts
polls/src/db/models/: Option.ts  Otp.ts  Poll.ts  User.ts
polls/src/messaging/: UserCreatedConsumer.ts  optionProducer.ts  pollProducer.ts
polls/src/routes/: optionRoutes.ts  otpRoutes.ts  pollRoutes.ts
votes/: docker-compose.yaml  package.json  votesSchema  votesSchema.sql
(+66 files in other folders)
