[package]
authors = ["JoelSaleem <joeljsaleem@gmail.com>"]
edition = "2018"
name = "polls"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
rocket = "0.4.6"
lapin = "1.6.6"
async-global-executor = "2.0.2"